@@ -24,6 +24,7 @@
 -- "opendir", "readdir", "closedir"
 -- tied hash
 -- tied array
+-- overload implemented for about half of the operators
 -- /xx regex modifier
 
 9.022 cpan:Perlito5  2017-05-xx
